--- a/app/src/main/res/menu/menu_main_contexual.xml
+++ b/app/src/main/res/menu/menu_main_contexual.xml
@@ -4,7 +4,7 @@
     tools:context="com.example.song.listviewfiddle.MainActivity">
 
     <item
-        android:id="@+id/menu_main_delete"
+        android:id="@+id/menu_main_contexual_delete"
         android:orderInCategory="200"
         android:title="Delete"
         app:showAsAction="always" />
