--- a/app/src/main/res/menu/menu_main_contexual.xml
+++ b/app/src/main/res/menu/menu_main_contexual.xml
@@ -5,7 +5,9 @@
 
     <item
         android:id="@+id/menu_main_contexual_delete"
-        android:orderInCategory="200"
-        android:title="Delete"
-        app:showAsAction="always" />
+        android:orderInCategory="100"
+        android:icon="@android:drawable/ic_menu_delete"
+        android:title="@string/menu_main_contexual_remove"
+        app:showAsAction="ifRoom" />
+
 </menu>
