--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
             android:layout_height="wrap_content" />
 
         <android.support.v4.view.ViewPager
+            android:background="@color/colorPrimaryLight"
             android:id="@+id/pager"
             android:layout_width="match_parent"
             android:layout_height="0dp"
